// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When using snapshots Should render with an element children 1`] = `
<span
  className="sc-bdVaJa lbJuWU"
>
  <div
    className="sidebar-header sc-bZQynM idruQr"
  >
    <div />
  </div>
</span>
`;

exports[`When using snapshots Should render with className and other props 1`] = `
<span
  className="sc-bdVaJa lbJuWU"
>
  <div
    className="my-class sidebar-header sc-bZQynM idruQr"
  >
    <div />
  </div>
</span>
`;

exports[`When using snapshots Should render with other props 1`] = `
<span
  className="sc-bdVaJa lbJuWU"
>
  <div
    className="sidebar-header sc-bZQynM idruQr"
  >
    <div />
  </div>
</span>
`;

exports[`When using snapshots Should render with the className prop 1`] = `
<span
  className="sc-bdVaJa lbJuWU"
>
  <div
    className="my-class sidebar-header sc-bZQynM idruQr"
  >
    <div />
  </div>
</span>
`;
